[package]
name = "robot-simulation-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["serialize"] }
bevy-inspector-egui = "0.29.1"
bevy_egui = { version = "0.33.0", features = ["render"] }
bevy_flycam = "0.15.0"
bevy_rapier3d = { version = "0.29.0", features = ["serde-serialize", "parallel"] }
serde = "1.0.217"
bevy_salva3d = { git = "https://github.com/nsjvidana/bevy_salva.git", rev = "e5b5349", features = ["rapier"] }
rfd = "0.15.2"
rapier3d-urdf = { version = "0.4.0", features = ["stl"] }
bincode = "1.3.3"
openrr-planner = "0.1.0"
ncollide3d = "0.33.0"
urdf-rs = { version = "0.9.0", features = ["transmission"] }
xurdf = "0.2.5"
k = "0.32.0"
thiserror = "1"
parking_lot = "0.12.3"
dyn-clone = "1.0.19"
bevy_infinite_grid = "0.14.1"
approx = "0.5.1"
derivative = "2.2.0"

[patch.crates-io]
urdf-rs = { git = "https://github.com/nsjvidana/urdf-rs.git", rev = "809847d" } # URDF transmissions support
openrr-planner = { git = "https://github.com/openrr/openrr.git", rev = "bb3e176" } # Force the crate to use urdf-rs v0.9

[profile.dev]
opt-level = 1
