[package]
name = "test-crate"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["serialize", "bevy_picking"] }
bevy_flycam = "0.15.0"
bevy_rapier3d = { version = "0.29.0", features = ["serde-serialize", "parallel", "picking-backend"] }
rapier3d-urdf = { version = "0.4.0", features = ["stl"] }
rapier3d-meshloader = "0.4.0"
bevy_salva3d = { git = "https://github.com/nsjvidana/bevy_salva.git", rev = "e5b5349", features = ["rapier"] }
ncollide3d = "0.33.0"
openrr-planner = "0.1.0"
k = "0.32.0"
rfd = "0.15.3"
urdf-rs = { version = "0.9.0", features = ["transmission"] }
bevy_egui = "0.33.0"
egui_extras = "0.31.1"
bevy_infinite_grid = "0.14.1"
thiserror = "1.0.69"
serde = "1.0.219"
bincode = "1.3.3"
bevy-inspector-egui = "0.30.0"
ahash = "0.8.11"
dyn-clone = "1.0.19"
bevy-trait-query = "0.7.0"
derivative = "2.2.0"
parking_lot = "0.12.3"
downcast-rs = "2.0.1"
approx = "0.5.1"

[patch.crates-io]
urdf-rs = { git = "https://github.com/nsjvidana/urdf-rs.git", rev = "809847d" } # URDF transmissions support
openrr-planner = { git = "https://github.com/openrr/openrr.git", rev = "bb3e176" } # Force the crate to use urdf-rs v0.9

[profile.dev.package."bevy_rapier3d"]
opt-level = 3

[profile.dev.package."parry3d"]
opt-level = 3
